adding reporting
