# delivery/delivery-infrastructure/src/main/java/pl/com/gymtech/courierspring/service/OrderService.java
@@ -1,5 +1,8 @@
 package pl.com.gymtech.courierspring.service;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import io.swagger.v3.core.util.Json;
 import lombok.AllArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -7,6 +10,7 @@ import org.springframework.data.jpa.repository.Lock;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import pl.com.gymtech.courierspring.config.JmsProducer;
 import pl.com.gymtech.courierspring.mapper.OrderMapper;
 import pl.com.gymtech.courierspring.dto.OrderDTO;
 import pl.com.gymtech.courierspring.dto.TrackingDTO;
@@ -29,42 +33,48 @@ public class OrderService {
     CustomerRepository customerRepository;
     OrderMapper orderMapper;
     TrackingService trackingService;
+    JmsProducer jmsProducer;
     private static final Logger log = LoggerFactory.getLogger(OrderService.class);
 
     private static final SimpleDateFormat dateFormat = new SimpleDateFormat("HH:mm:ss");
 
 
-    public List<OrderDTO> getCustomerOrders(String customerId){
-        return  orderMapper.orderToOrderDTO(orderRepository.findByCustomerId(customerId));
+    public List<OrderDTO> getCustomerOrders(String customerId) {
+        return orderMapper.orderToOrderDTO(orderRepository.findByCustomerId(customerId));
     }
-    public List<OrderDTO> getAllOrders(){
+
+    public List<OrderDTO> getAllOrders() {
         return orderMapper.orderToOrderDTO(orderRepository.findAll());
     }
-    public OrderDTO getOrderById(String id){
-        return orderMapper.orderToOrderDTO(orderRepository.findById(id).orElseThrow(()->new NoSuchElementException("Order with id: "+id+ " not found!" )));
+
+    public OrderDTO getOrderById(String id) {
+        return orderMapper.orderToOrderDTO(orderRepository.findById(id).orElseThrow(() -> new NoSuchElementException("Order with id: " + id + " not found!")));
 
     }
+
     @Transactional
-    public OrderDTO createOrder(OrderDTO orderDTO){
-        Order order=new Order(orderDTO.getSenderAddress(),orderDTO.getReceiverAddress(),orderDTO.getPackageType(),orderDTO.getPackageSize(),orderDTO.getStatus());
-        order.setCustomer(customerRepository.findById(orderDTO.getCustomerId()).orElseThrow(()->new NoSuchElementException("Customer with id: "+orderDTO.getCustomerId()+ " not found!")));
-        TrackingDTO trackingDTO= new TrackingDTO();
+    public OrderDTO createOrder(OrderDTO orderDTO) {
+        Order order = new Order(orderDTO.getSenderAddress(), orderDTO.getReceiverAddress(), orderDTO.getPackageType(), orderDTO.getPackageSize(), orderDTO.getStatus());
+        order.setCustomer(customerRepository.findById(orderDTO.getCustomerId()).orElseThrow(() -> new NoSuchElementException("Customer with id: " + orderDTO.getCustomerId() + " not found!")));
+        TrackingDTO trackingDTO = new TrackingDTO();
         trackingDTO.setEventType("Przyjęto zamówienie");
         trackingDTO.setEventTime(LocalDate.now());
         trackingDTO.setLocation(order.getSenderAddress());
         trackingDTO.setDescription("Zamówienie w trakcie realizacji");
 
-        order=orderRepository.save(order);
-        trackingService.createOrderTracking(trackingDTO,order);
+        order = orderRepository.save(order);
+        trackingService.createOrderTracking(trackingDTO, order);
         return orderMapper.orderToOrderDTO(order);
     }
+
     @Transactional
-    public void deleteOrder(String id){
+    public void deleteOrder(String id) {
         orderRepository.deleteById(id);
     }
+
     @Transactional
-    public OrderDTO updateOrder(String id,OrderDTO orderDTO){
-        Order order=orderRepository.findById(id).orElseThrow(()->new NoSuchElementException("Order with id: "+id+ " not found!" ));
+    public OrderDTO updateOrder(String id, OrderDTO orderDTO) {
+        Order order = orderRepository.findById(id).orElseThrow(() -> new NoSuchElementException("Order with id: " + id + " not found!"));
         order.setPackageSize(orderDTO.getPackageSize());
         order.setDeliveryDate(orderDTO.getDeliveryDate());
         order.setPackageType(orderDTO.getPackageType());
@@ -74,20 +84,36 @@ public class OrderService {
         return orderMapper.orderToOrderDTO(orderRepository.save(order));
 
     }
-    public TrackingDTO getOrderTracking(String orderId){
-        return  trackingService.getTracking(orderId);
+
+    public TrackingDTO getOrderTracking(String orderId) {
+        return trackingService.getTracking(orderId);
     }
+
     @Transactional
-    public  TrackingDTO updateOrderTracking(String id,TrackingDTO trackingDTO){
-        return trackingService.updateTracking(id,trackingDTO);
+    public TrackingDTO updateOrderTracking(String id, TrackingDTO trackingDTO) {
+        return trackingService.updateTracking(id, trackingDTO);
 
     }
+
     @Lock(LockModeType.PESSIMISTIC_WRITE)
-    public OrderDTO findFirstByStatus(String status){
+    public OrderDTO findFirstByStatus(String status) {
         return orderMapper.orderToOrderDTO(orderRepository.findFirstByStatus(status));
     }
+
+    public List<OrderDTO> getOrdersBetweenDate(LocalDate start, LocalDate end) {
+        return orderMapper.orderToOrderDTO(orderRepository.findByDeliveryDateBetween(start, end));
+    }
+
+    public List<OrderDTO> sendReport(LocalDate start, LocalDate end) {
+        List<OrderDTO> report = getOrdersBetweenDate(start, end);
+        jmsProducer.sendMessage(report);
+
+        return report;
+
+    }
+
     @Transactional
-   // @Scheduled(fixedDelay = 1000) // Przykładowy interwał czasowy - 1 sekunda
+    //@Scheduled(fixedDelay = 1000) // Przykładowy interwał czasowy - 1 sekunda
     public void updateOrderStatus() {
         log.info("The time is now {}", dateFormat.format(new Date()));
         OrderDTO order = findFirstByStatus("Delivery");
